# deriva-mcp-core

./: .coveragerc  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yaml
docs/: ADR-0001-async-architecture.md  ADR-0002-system-prompt-extensions.md  deployment-guide.md  gap_analysis.md  plugin-authoring-guide.md  usage-guide.md  workplan-deriva-mcp-core.md  workplan-deriva-mcp-ui.md
src/deriva_mcp_core/: __init__.py  config.py  context.py  server.py
src/deriva_mcp_core/auth/: __init__.py  anonymous.py  exchange.py  introspect.py  introspect_cache.py  token_cache.py  verifier.py
src/deriva_mcp_core/plugin/: __init__.py  api.py  loader.py
src/deriva_mcp_core/rag/: __init__.py  chunker.py  config.py  crawler.py  data.py  docs.py  github_crawler.py  schema.py  store.py  tools.py  web_crawler.py
src/deriva_mcp_core/tasks/: __init__.py  manager.py
src/deriva_mcp_core/telemetry/: __init__.py
src/deriva_mcp_core/telemetry/audit/: logger.py
src/deriva_mcp_core/tools/: __init__.py  annotation.py  catalog.py  entity.py  hatrac.py  prompts.py  query.py  resources.py  schema.py  tasks.py  vocabulary.py
tests/: conftest.py  test_anonymous.py  test_auth.py  test_config.py  test_context.py  test_plugin.py  test_plugin_smoke.py  test_rag_chunker.py  test_rag_crawler.py  test_rag_integration.py  test_rag_schema.py  test_rag_tools.py  test_resources.py  test_scaffold.py  test_server.py  test_tasks.py  test_tools.py  test_verifier.py
