[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deriva-mcp-core"
version = "0.1.0"
description = "Reference implementation MCP server for the DERIVA platform"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "Informatics and Scientific Research Division, USC" }
]
keywords = ["mcp", "deriva", "ermrest", "oauth"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.9.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "python-json-logger",
    "deriva",
    "chevron",
    "python-dateutil",
]

[project.optional-dependencies]
rag = [
    "chromadb>=0.5",
    "asyncpg>=0.29",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "pytest-cov>=5.0",
    "testing.postgresql>=1.3",
]

[project.scripts]
deriva-mcp-core = "deriva_mcp_core.server:main"

[project.entry-points."deriva_mcp.plugins"]
# Reserved: built-in tool modules are registered directly, not via entry points.
# Third-party plugins declare their register() function here.

[tool.hatch.build.targets.wheel]
packages = ["src/deriva_mcp_core"]

[tool.uv.sources]
deriva = { git = "https://github.com/informatics-isi-edu/deriva-py", branch = "master" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]
ignore = ["E402", "E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-vv -r w --tb=short --disable-warnings --cov=deriva_mcp_core --cov-report=term-missing"
filterwarnings = [
  "always"
]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring live Credenza and DERIVA services",
    "rag: marks tests requiring the RAG optional dependencies (chromadb, asyncpg)",
]

[tool.coverage.run]
source = ["src/deriva_mcp_core"]
omit = [
    "tests/*",
    "*/plugin/loader.py",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
]